tests/spec/parse/snapshots/select_wildcard.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    select {
      _ => print("default"),
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Select {
                        arms: [
                            SelectArm {
                                pattern: WildCard {
                                    body: Call {
                                        expression: Identifier {
                                            value: "print",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 33,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [
                                            Literal {
                                                literal: String {
                                                    value: "default",
                                                    raw: false,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 39,
                                                    byte_length: 9,
                                                },
                                            },
                                        ],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 33,
                                            byte_length: 16,
                                        },
                                        call_kind: None,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 39,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 45,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 55,
        },
    },
]
