tests/spec/parse/snapshots/shorthand_struct_in_binary_rhs_allowed_outside_control_flow.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let foo = 1;
    let x = 3;
    foo < Bar { x }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "foo",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 1,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 25,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 11,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 34,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 3,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 30,
                            byte_length: 9,
                        },
                    },
                    Binary {
                        operator: LessThan,
                        left: Identifier {
                            value: "foo",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 43,
                                byte_length: 3,
                            },
                            resolution: Unresolved,
                        },
                        right: StructCall {
                            name: "Bar",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "x",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 55,
                                        byte_length: 1,
                                    },
                                    value: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 55,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                },
                            ],
                            spread: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 49,
                                byte_length: 9,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 43,
                            byte_length: 15,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 49,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 59,
        },
    },
]
