tests/spec/parse/snapshots/shorthand_struct_in_comparison_rhs_with_body_after.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Point { x: int }
  fn test(other: Point) {
    let x = 1;
    if other == Point { x } { true } else { false }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Point",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "x",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 23,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 28,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "other",
                    span: Span {
                        file_id: 0,
                        byte_offset: 33,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Point",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 40,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 55,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 1,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 59,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 51,
                            byte_length: 9,
                        },
                    },
                    If {
                        condition: Binary {
                            operator: Equal,
                            left: Identifier {
                                value: "other",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 67,
                                    byte_length: 5,
                                },
                                resolution: Unresolved,
                            },
                            right: StructCall {
                                name: "Point",
                                field_assignments: [
                                    StructFieldAssignment {
                                        name: "x",
                                        name_span: Span {
                                            file_id: 0,
                                            byte_offset: 84,
                                            byte_length: 1,
                                        },
                                        value: Identifier {
                                            value: "x",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 84,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                    },
                                ],
                                spread: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 76,
                                    byte_length: 11,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 67,
                                byte_length: 20,
                            },
                        },
                        consequence: Block {
                            items: [
                                Literal {
                                    literal: Boolean(
                                        true,
                                    ),
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 90,
                                        byte_length: 4,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 88,
                                byte_length: 8,
                            },
                        },
                        alternative: Some(
                            Block {
                                items: [
                                    Literal {
                                        literal: Boolean(
                                            false,
                                        ),
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 104,
                                            byte_length: 5,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 102,
                                    byte_length: 9,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 64,
                            byte_length: 47,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 47,
                    byte_length: 66,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 25,
            byte_length: 88,
        },
    },
]
